src/objects/MCEC_Report_Data__c.object
<CustomObject>
    <description>This object pulls from both leads and opportunities to compile all data needed for  reporting across both object types.</description>
    <fields>
        <fullName>Applicant_Elligible_for_IBLS__c</fullName>
        <formula>if(isblank( text(Manual_IBLS_Category__c) )=false,text(Manual_IBLS_Category__c) ,

if(isblank(Income_based_Loan_Support_Opportunity__c )=true, Income_based_Loan_Support_lead__c ,Income_based_Loan_Support_Opportunity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Elligible for IBLS?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date_Lead__c</fullName>
        <formula>Lead__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date_Lead</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Date_Opportunity__c</fullName>
        <formula>Opportunity__r.Application_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date_Opportunity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Date_Report__c</fullName>
        <formula>if(isblank( Application_Date_Opportunity__c )=true, Application_Date_Lead__c , Application_Date_Opportunity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Report_Date__c</fullName>
        <formula>if(isnull(Opportunity__r.Personal_Credit_Report2__r.CreatedDate)= True,  Lead__r.Personal_Credit_Report__r.CreatedDate , Opportunity__r.Personal_Credit_Report2__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cumulative_Loan_to_Value_Lead__c</fullName>
        <formula>Lead__r.Cumulative_Loan_to_Value_if_Applicable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Loan to Value (Lead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_Loan_to_Value_Opportunity__c</fullName>
        <formula>Opportunity__r.Cumulative_Loan_to_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Loan to Value (Opportunity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_Loan_to_Value_Report__c</fullName>
        <formula>if(isblank( Cumulative_Loan_to_Value_Opportunity__c )=true,Cumulative_Loan_to_Value_Lead__c , Cumulative_Loan_to_Value_Opportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cumulative Loan to Value if Applicable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOER_Lead__c</fullName>
        <formula>Lead__r.DOER_Solar_Loan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOER Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOER_Loan_REference__c</fullName>
        <formula>Loan__r.DOER_Solar_Loann__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOER Loan REference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOER_Loan__c</fullName>
        <formula>or( DOER_Lead__c , DOER_Opportunity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOER Loan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOER_Opportunity__c</fullName>
        <formula>Opportunity__r.DOER_Solar_Loan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOER Opportunity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Interconnection_Disbursed__c</fullName>
        <description>Formula field that gets info from the disbursal record via the loan lookup field.</description>
        <formula>Loan__r.Date_Interconnection_Disbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that gets info from the disbursal record via the loan lookup field.</inlineHelpText>
        <label>Date Interconnection Disbursed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Income_based_Loan_Support_Opportunity__c</fullName>
        <formula>if(isblank( Opportunity__c )=false,Opportunity__r.IBLS_Category__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income-based Loan Support (Opportunity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_based_Loan_Support_lead__c</fullName>
        <formula>Lead__r.Income_Support__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income-based Loan Support (lead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Partner__c</fullName>
        <description>Links to Partner  (installer) from related lead record.</description>
        <formula>Lead__r.Partner_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lead from which the MCEC Report Data object pulls its data</description>
        <inlineHelpText>This is the lead from which the MCEC Report Data object pulls its data</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Loan Pipeline Report Data</relationshipLabel>
        <relationshipName>MCEC_Report_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Lead__c</fullName>
        <formula>Lead__r.Loan_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Amount (Lead)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Opportunity__c</fullName>
        <formula>Opportunity__r.Loan_Amount_Financed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Amount (Opportunity)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Amount_Report__c</fullName>
        <formula>if( Loan_Amount_Opportunity__c=0, Loan_Amount_Lead__c , Loan_Amount_Opportunity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Identifier_Lead__c</fullName>
        <description>Record ID of related Lead</description>
        <formula>Lead__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record ID of related Lead</inlineHelpText>
        <label>Loan Identifier (Lead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Identifier_Opportunity__c</fullName>
        <description>Record ID of related Opportunity</description>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Record ID of related Opportunity</inlineHelpText>
        <label>Loan Identifier (Opportunity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Identifier_for_Report__c</fullName>
        <formula>if( isblank(Loan_Identifier_Opportunity__c )=true, Loan_Identifier_Lead__c ,Loan_Identifier_Opportunity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <formula>Loan__r.Loan_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Partner__c</fullName>
        <formula>Loan__r.Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Program_Class_Lead__c</fullName>
        <formula>if(isblank( Lead__c )=true,null,Lead__r.Loan_Program_Class__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Program Class (Lead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Program_Class_Opportunity__c</fullName>
        <description>Loan program class from Opportunity</description>
        <formula>IF(ISBLANK(Opportunity__r.Loan_Program_Class__c)=true,  text(Opportunity__r.DOER_Loan_Program__c ),Opportunity__r.Loan_Program_Class__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Program Class (Opportunity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Program_Class_Report__c</fullName>
        <description>Grabs the opportunity value if it exists, or defaults to lead value.</description>
        <formula>if(isblank( Loan_Program_Class_Opportunity__c )=true,  Loan_Program_Class_Lead__c  ,  Loan_Program_Class_Opportunity__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Program Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Status_from_Loan__c</fullName>
        <formula>text( Loan__r.Loan_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Status from Loan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Loan record which the report gets information from.</description>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Loan Pipeline Report Data</relationshipLabel>
        <relationshipName>Loan_Pipeline_Report_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCEC_Project_ID_Lead__c</fullName>
        <description>MCEC Project ID (from Lead)</description>
        <formula>Lead__r.Project_Identification_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MCEC Project ID (from Lead)</inlineHelpText>
        <label>MCEC Project ID (Lead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCEC_Project_ID_Opportunity__c</fullName>
        <description>MCEC Project ID (From Opportunity)</description>
        <formula>Opportunity__r.project_identification_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MCEC Project ID (From Opportunity)</inlineHelpText>
        <label>MCEC Project ID (Opportunity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCEC_Project_ID_Report__c</fullName>
        <formula>if(isblank( MCEC_Project_ID_Opportunity__c )=true, MCEC_Project_ID_Lead__c , MCEC_Project_ID_Opportunity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solar Loan Program - Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCEC_Status_Lead__c</fullName>
        <formula>Lead__r.Status_for_MCEC_Report__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCEC Status (Lead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCEC_Status_Opportunity__c</fullName>
        <formula>if(isblank( Opportunity__c),&quot;&quot;,

if( Repayment_Period_MCEC__c = &quot;Null&quot;, 

if ( or(text( Opportunity__r.StageName ) = &quot;Cancelled&quot;,text(Opportunity__r.StageName)=&quot;Expired&quot;),&quot;Withdrawn&quot;, 

if (text(Opportunity__r.StageName) = &quot;Unqualified&quot;, &quot;Denied&quot;, &quot;Pending&quot;)), 

Repayment_Period_MCEC__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCEC Status (Opportunity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_IBLS_Category__c</fullName>
        <description>Manual IBLS Category to Override the formula if the formula is wrong</description>
        <inlineHelpText>Manual IBLS Category to Override the opportunity and lead.  Populate ONLY if Avidia tells you to.</inlineHelpText>
        <label>Manual IBLS Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Category 1</fullName>
                </value>
                <value>
                    <fullName>Category 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Status_Date__c</fullName>
        <description>Manual input if the workflow has not populated a status date for the record.</description>
        <inlineHelpText>Manual input ONLY  if the workflow has not populated a status date for the record.</inlineHelpText>
        <label>Manual Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Borrowers_Lead__c</fullName>
        <formula>Lead__r.Lead_Number_of_Applicants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Borrowers (Lead)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Borrowers_Opportunity__c</fullName>
        <formula>Opportunity__r.Opportunity_Number_of_Applicants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Borrowers (Opportunity)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Borrowers_on_Application_Repor__c</fullName>
        <formula>blankvalue( Number_of_Borrowers_Opportunity__c , Number_of_Borrowers_Lead__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Borrowers on Application</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Partner__c</fullName>
        <description>Links to partner (installer) from related opportunity.</description>
        <formula>Opportunity__r.Partner_tag_lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the opportunity from which the MCEC Report Object Pulls its Data</description>
        <inlineHelpText>This is the opportunity from which the MCEC Report Object Pulls its Data</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Loan Pipeline Report Data</relationshipLabel>
        <relationshipName>MCEC_Report_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <formula>if(isblank(Loan_Partner__c) = True,
if(isblank( Opportunity_Partner__c )=true, Lead_Partner__c ,Opportunity_Partner__c), Loan_Partner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Loan_is_120__c</fullName>
        <formula>FALSE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Loan is 120 Days Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Decline_1__c</fullName>
        <formula>if(Status_for_MCEC_Report__c = &quot;Denied&quot;, Lead__r.Adverse_Credit_Notice_1__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason for Decline 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Decline_2__c</fullName>
        <formula>if(Status_for_MCEC_Report__c = &quot;Denied&quot;, Lead__r.Adverse_Credit_Notice_2__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reason for Decline 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Type_Lead__c</fullName>
        <formula>Lead__r.Security_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security Type (Lead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Type_Opportunity__c</fullName>
        <formula>Opportunity__r.Security_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security Type (Opportunity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Type_Report__c</fullName>
        <formula>if(isblank( Security_Type_Opportunity__c )=true, Security_Type_Lead__c , Security_Type_Opportunity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Security Type - If Applicable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Date_Lead__c</fullName>
        <formula>Lead__r.MCEC_Status_Last_Modified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Date (Lead)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Date_Opportunity__c</fullName>
        <description>Grabs last modified date for MCEC status or if the Opportunity is Complete, the close date.</description>
        <formula>Opportunity__r.MCEC_Status_Last_Modified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Date (Opportunity)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Date_Report__c</fullName>
        <formula>if(isblank( Manual_Status_Date__c )=false,Manual_Status_Date__c ,

if(isblank( Loan__r.Date_Interconnection_Disbursed__c )=false, Loan__r.Date_Interconnection_Disbursed__c,

if(isblank(Loan__r.Date_Contract_Signature_Disbursed__c)=false,
Loan__r.Date_Contract_Signature_Disbursed__c,

if(isblank( Status_Date_Opportunity__c ), Status_Date_Lead__c ,Status_Date_Opportunity__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Override__c</fullName>
        <description>Select one of these to override the MCEC status from the opportunity or lead.  ONly used to correct status for edge cases.</description>
        <inlineHelpText>Select one of these to override the MCEC status from the opportunity or lead.  ONly used to correct status for edge cases.</inlineHelpText>
        <label>Status Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>In Payment - Interest Only Period</fullName>
                </value>
                <value>
                    <fullName>In Payment - Full Term Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_for_MCEC_Report__c</fullName>
        <formula>if(isblank( text(Status_Override__c) )=true, 

if( Loan_Status_from_Loan__c = &quot;Paid Off&quot;, &quot;Complete&quot;, 

if(isblank(  MCEC_Status_Opportunity__c  )=true,  MCEC_Status_Lead__c ,MCEC_Status_Opportunity__c)), text(Status_Override__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unadvanced_Funds__c</fullName>
        <formula>Loan__r.Total_Funds_Not_Yet_Disbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unadvanced Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unpaid_Principal_Balance__c</fullName>
        <formula>Loan__r.Principal_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Loan Pipeline Report Data</label>
    <listViews>
        <fullName>StatusOverrideView</fullName>
        <columns>NAME</columns>
        <columns>Status_Override__c</columns>
        <filterScope>Everything</filterScope>
        <label>Status Override View</label>
    </listViews>
    <nameField>
        <label>Loan Pipeline Report Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Pipeline Report Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>